updated the offline baseline

--- a/nlp/offline_baseline.ipynb
+++ b/nlp/offline_baseline.ipynb
@@ -150,12 +150,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "22c3a7dd4be346aa82d73178e767a8e5",
+       "model_id": "684140dd7d074a67961f89e3b1951a6f",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "HBox(children=(HTML(value=''), FloatProgress(value=0.0, max=25.0), HTML(value='')))"
+       "HBox(children=(HTML(value=''), FloatProgress(value=0.0, max=221.0), HTML(value='')))"
       ]
      },
      "metadata": {},
@@ -178,7 +178,7 @@
     "words = sorted(words)\n",
     "\n",
     "with torch.inference_mode():\n",
-    "    word_toxicities = predict_toxicity(texts, batch_size=100, return_scores=True)\n",
+    "    word_toxicities = predict_toxicity(words, batch_size=100, return_scores=True)\n",
     "    \n",
     "toxicity = dict(zip(words, word_toxicities))\n"
    ]
@@ -311,34 +311,61 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Сложим эмбеддинги нетоксичных слов в kd-дерево, чтобы можно было близко искать ближайших соседей"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nontoxic_emb_inds = [ind for word, ind in embs_voc.items() if toxicity.get(word, 1.0) <= 0.5]\n",
+    "embs_vectors_normed_nontoxic = embs_vectors_normed[nontoxic_emb_inds]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.neighbors import KDTree\n",
+    "embs_tree = KDTree(embs_vectors_normed_nontoxic, leaf_size=20)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Функция находит самое близкое нетоксичное слово по предпосчитанным эмбеддингам слов"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "from functools import lru_cache\n",
     "\n",
     "@lru_cache()\n",
-    "def find_closest_nontoxic(word, threshold=0.5, measure='cosine'):\n",
+    "def find_closest_nontoxic(word, threshold=0.5, allow_self=False):\n",
+    "    if toxicity.get(word, 1.0) <= threshold:\n",
+    "        return word\n",
+    "    \n",
+    "    if word not in toxicity and word not in embs_voc:\n",
+    "        return None\n",
+    "    \n",
     "    threshold = min(toxicity.get(word, threshold), threshold)\n",
     "    word = normalize(word)\n",
     "    word_emb = calc_embs([word])\n",
     "    if word_emb is None or word_emb[0] is None:\n",
     "        return None\n",
-    "    word_emb = word_emb[0]\n",
-    "    if measure == 'cosine':\n",
-    "        word_emb /= np.linalg.norm(word_emb)\n",
-    "        dot = embs_vectors_normed.dot(word_emb)\n",
-    "    elif measure == 'l2':\n",
-    "        dot = -((embs_vectors - word_emb[None]) ** 2).sum(axis=1)\n",
     "    \n",
-    "    for i in np.argsort(dot)[::-1]:\n",
-    "        other_word = embs_voc_by_id[i]\n",
-    "        if other_word != word and toxicity.get(other_word, 1.0) <= threshold:\n",
+    "    for i in embs_tree.query(word_emb)[1][0]:\n",
+    "        other_word = embs_voc_by_id[nontoxic_emb_inds[i]]\n",
+    "        if (other_word != word or allow_self) and toxicity.get(other_word, 1.0) <= threshold:\n",
     "            return other_word\n",
     "    return None"
    ]
@@ -347,47 +374,30 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Итеративно пытаемся заменить самое токсичное слово на его нетоксичный аналог"
+    "Заменяем токсичные слова на ближайшие по эмбеддингам не-токсичные"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def detox_iterative(line):\n",
-    "    result = normalize(line).split()\n",
-    "    while len(result) > 0 and predict_toxicity([' '.join(result)], verbose=False)[0]:\n",
-    "        most_toxic = np.argmax(list(map(lambda x: toxicity.get(x, 0.0), result)))\n",
-    "        \n",
-    "        new_variant = find_closest_nontoxic(result[most_toxic]) or ''\n",
-    "        augmented_result = result[:most_toxic] + [new_variant] + result[most_toxic + 1:]\n",
-    "        \n",
-    "        comparison = predict_toxicity(\n",
-    "            [' '.join(result), ' '.join(augmented_result)],\n",
-    "            verbose=False,\n",
-    "            return_scores=True,\n",
-    "            batch_size=10\n",
-    "        )\n",
-    "        # 0.1 тут \n",
-    "        if not new_variant or comparison[0] <= comparison[1] + 0.1:\n",
-    "            result = result[:most_toxic] + result[most_toxic + 1:]\n",
-    "        else:\n",
-    "            result = augmented_result\n",
-    "    \n",
-    "    return ' '.join(result)"
+    "def detox(line):\n",
+    "    words = normalize(line).split()\n",
+    "    fixed_words = [find_closest_nontoxic(word, allow_self=True) or '' for word in words]\n",
+    "    return ' '.join(fixed_words)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "88b6b0c00c5645198a4f67ab5c6b73b5",
+       "model_id": "14420c8442fb409aa3c2acb1c75cc982",
        "version_major": 2,
        "version_minor": 0
       },
@@ -407,7 +417,7 @@
     }
    ],
    "source": [
-    "fixed_texts = list(map(detox_iterative, tqdm(texts)))"
+    "fixed_texts = list(map(detox, tqdm(texts)))"
    ]
   },
   {
@@ -419,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -437,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -451,9 +461,9 @@
       "Loading texts\n",
       "Loading embeddings\n",
       "Scoring\n",
-      " 18%|███████▎                                | 92/500.0 [00:03<00:15, 26.27it/s]Token indices sequence length is longer than the specified maximum sequence length for this model (533 > 512). Running this sequence through the model will result in indexing errors\n",
-      "100%|███████████████████████████████████████| 500/500.0 [00:21<00:00, 23.74it/s]\n",
-      "2500it [00:12, 194.21it/s]\n",
+      " 18%|███████▎                                | 92/500.0 [00:03<00:15, 27.00it/s]Token indices sequence length is longer than the specified maximum sequence length for this model (533 > 512). Running this sequence through the model will result in indexing errors\n",
+      "100%|███████████████████████████████████████| 500/500.0 [00:20<00:00, 24.15it/s]\n",
+      "2500it [00:13, 190.12it/s]\n",
       "28.07999973873593\n"
      ]
     }
@@ -471,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -485,10 +495,10 @@
       "Loading texts\n",
       "Loading embeddings\n",
       "Scoring\n",
-      " 37%|██████████████▍                        | 185/500.0 [00:05<00:09, 34.14it/s]Token indices sequence length is longer than the specified maximum sequence length for this model (562 > 512). Running this sequence through the model will result in indexing errors\n",
-      "100%|███████████████████████████████████████| 500/500.0 [00:13<00:00, 36.94it/s]\n",
-      "2500it [00:34, 73.31it/s] \n",
-      "57.84865188082298\n"
+      " 24%|█████████▏                             | 118/500.0 [00:04<00:22, 17.24it/s]Token indices sequence length is longer than the specified maximum sequence length for this model (591 > 512). Running this sequence through the model will result in indexing errors\n",
+      "100%|███████████████████████████████████████| 500/500.0 [00:20<00:00, 24.95it/s]\n",
+      "2500it [00:23, 105.69it/s]\n",
+      "52.62094179484696\n"
      ]
     }
    ],
