add offline baseline

--- a/nlp/offline_baseline.ipynb
+++ b/nlp/offline_baseline.ipynb
@@ -150,7 +150,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "684140dd7d074a67961f89e3b1951a6f",
+       "model_id": "253b4b8ac15a4abdbaef313808ac2932",
        "version_major": 2,
        "version_minor": 0
       },
@@ -247,76 +247,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Вычисление эмбеддинговых расстояний, как в score.py"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def count_none(array):\n",
-    "    res = 0\n",
-    "    for el in array:\n",
-    "        if el is None:\n",
-    "            res += 1\n",
-    "    return res\n",
-    "\n",
-    "\n",
-    "def greedy_match_embs(a, b, dots=None):\n",
-    "    if len(a) == 0:\n",
-    "        return len(b)\n",
-    "    if len(b) == 0:\n",
-    "        return len([x for x in a if x is not None])\n",
-    "    # compute dot-product on initial run\n",
-    "    if dots is None:\n",
-    "        a_none_count = count_none(a)\n",
-    "        b_none_count = count_none(b)\n",
-    "        \n",
-    "        if a_none_count + b_none_count > 0:\n",
-    "            # None values don't match anything except other None values\n",
-    "            return max(b_none_count - a_none_count, 0) + greedy_match_embs(\n",
-    "                [x for x in a if x is not None],\n",
-    "                [x for x in b if x is not None]\n",
-    "            )\n",
-    "        # scale embeddings so that their dot product turns into cosine\n",
-    "        a = np.array(a) / np.linalg.norm(a, axis=1, keepdims=True)\n",
-    "        b = np.array(b) / np.linalg.norm(b, axis=1, keepdims=True)\n",
-    "        dots = np.dot(a, b.T)\n",
-    "    # select the closest embeddings\n",
-    "    # note: assume None embeddings are filtered out at this point\n",
-    "    a_closest, b_closest = np.unravel_index(np.argmax(dots), dots.shape)\n",
-    "    min_dist = (1 - dots[a_closest, b_closest]) / 2\n",
-    "    \n",
-    "    # exclude the matched embeddings from the subsequent iterations\n",
-    "    remaining_a_inds = np.arange(len(a)) != a_closest\n",
-    "    remaining_b_inds = np.arange(len(b)) != b_closest\n",
-    "    \n",
-    "    return min_dist + greedy_match_embs(\n",
-    "        a[remaining_a_inds], \n",
-    "        b[remaining_b_inds], \n",
-    "        dots[remaining_a_inds][:, remaining_b_inds]\n",
-    "    )\n",
-    "\n",
-    "\n",
-    "def calc_semantic_distance(a, b):\n",
-    "    a_embs = calc_embs(a)\n",
-    "    b_embs = calc_embs(b)\n",
-    "    return np.maximum(greedy_match_embs(a_embs, b_embs), 0)\n",
-    "    "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "Сложим эмбеддинги нетоксичных слов в kd-дерево, чтобы можно было близко искать ближайших соседей"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -326,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -343,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -379,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -391,13 +327,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "14420c8442fb409aa3c2acb1c75cc982",
+       "model_id": "6dc176422c4a48a9b06a7600f8907516",
        "version_major": 2,
        "version_minor": 0
       },
@@ -429,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -443,6 +379,40 @@
    "metadata": {},
    "source": [
     "Скор, если никак не изменять комментарии:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/home/dimdi-y/.local/lib/python3.7/site-packages/requests/__init__.py:104: RequestsDependencyWarning: urllib3 (1.26.6) or chardet (2.3.0)/charset_normalizer (2.0.4) doesn't match a supported version!\n",
+      "  RequestsDependencyWarning)\n",
+      "Loading tokenizer\n",
+      "Loading model\n",
+      "Loading texts\n",
+      "Loading embeddings\n",
+      "Scoring\n",
+      " 18%|███████▎                                | 92/500.0 [00:03<00:15, 26.92it/s]Token indices sequence length is longer than the specified maximum sequence length for this model (533 > 512). Running this sequence through the model will result in indexing errors\n",
+      "100%|███████████████████████████████████████| 500/500.0 [00:20<00:00, 24.07it/s]\n",
+      "2500it [00:12, 202.25it/s]\n",
+      "28.08\n"
+     ]
+    }
+   ],
+   "source": [
+    "!python3.7 score.py public_testset.short.txt public_testset.short.txt  --embeddings embeddings_with_lemmas.npz --model ./trained_roberta/ --device cuda --score -"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Скор бейзлайна:"
    ]
   },
   {
@@ -461,49 +431,44 @@
       "Loading texts\n",
       "Loading embeddings\n",
       "Scoring\n",
-      " 18%|███████▎                                | 92/500.0 [00:03<00:15, 27.00it/s]Token indices sequence length is longer than the specified maximum sequence length for this model (533 > 512). Running this sequence through the model will result in indexing errors\n",
-      "100%|███████████████████████████████████████| 500/500.0 [00:20<00:00, 24.15it/s]\n",
-      "2500it [00:13, 190.12it/s]\n",
-      "28.07999973873593\n"
+      " 24%|█████████▏                             | 118/500.0 [00:04<00:22, 17.10it/s]Token indices sequence length is longer than the specified maximum sequence length for this model (591 > 512). Running this sequence through the model will result in indexing errors\n",
+      "100%|███████████████████████████████████████| 500/500.0 [00:20<00:00, 24.98it/s]\n",
+      "2500it [00:28, 88.25it/s] \n",
+      "41.06\n"
      ]
     }
    ],
    "source": [
-    "!CUDA_VISIBLE_DEVICES=2 python3.7 score.py public_testset.short.txt public_testset.short.txt  --embeddings embeddings_with_lemmas.npz --model ./trained_roberta/ --device cuda --score -"
+    "!python3.7 score.py public_testset.short.txt baseline_fixed.txt  --embeddings embeddings_with_lemmas.npz --model ./trained_roberta/ --device cuda --score -"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Скор бейзлайна:"
+    "Сохраним данные для бейзлайна online-задачи"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 16,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/home/dimdi-y/.local/lib/python3.7/site-packages/requests/__init__.py:104: RequestsDependencyWarning: urllib3 (1.26.6) or chardet (2.3.0)/charset_normalizer (2.0.4) doesn't match a supported version!\n",
-      "  RequestsDependencyWarning)\n",
-      "Loading tokenizer\n",
-      "Loading model\n",
-      "Loading texts\n",
-      "Loading embeddings\n",
-      "Scoring\n",
-      " 24%|█████████▏                             | 118/500.0 [00:04<00:22, 17.24it/s]Token indices sequence length is longer than the specified maximum sequence length for this model (591 > 512). Running this sequence through the model will result in indexing errors\n",
-      "100%|███████████████████████████████████████| 500/500.0 [00:20<00:00, 24.95it/s]\n",
-      "2500it [00:23, 105.69it/s]\n",
-      "52.62094179484696\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "!CUDA_VISIBLE_DEVICES=2 python3.7 score.py public_testset.short.txt baseline_fixed.txt  --embeddings embeddings_with_lemmas.npz --model ./trained_roberta/ --device cuda --score -"
+    "!mkdir -p online_baseline"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pickle as pkl\n",
+    "\n",
+    "with open('./online_baseline/data.pkl', 'wb') as f:\n",
+    "    pkl.dump(toxicity, f)\n",
+    "    pkl.dump(nontoxic_emb_inds, f)"
    ]
   }
  ],
