--- a/recsys/baseline.ipynb
+++ b/recsys/baseline.ipynb
@@ -187,7 +187,7 @@
        "      <td>1000.0</td>\n",
        "      <td>4.479702</td>\n",
        "      <td>[30776, 31375]</td>\n",
-       "      <td>[1415, 1509, 1018, 3501618484, 1082283206, 141...</td>\n",
+       "      <td>[1018, 1509, 11177, 11617, 11629, 11704, 11867...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -196,7 +196,7 @@
        "      <td>1000.0</td>\n",
        "      <td>4.514509</td>\n",
        "      <td>[30776, 30770]</td>\n",
-       "      <td>[1018, 3501779478, 246, 11704, 11629, 11867, 3...</td>\n",
+       "      <td>[246, 1018, 11617, 11629, 11704, 11867, 20422,...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -205,7 +205,7 @@
        "      <td>1000.0</td>\n",
        "      <td>3.884615</td>\n",
        "      <td>[30770, 30774]</td>\n",
-       "      <td>[21247, 3501779478, 11867, 11629, 11704, 11177...</td>\n",
+       "      <td>[1018, 11177, 11617, 11629, 11704, 11867, 2042...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -214,7 +214,7 @@
        "      <td>1000.0</td>\n",
        "      <td>NaN</td>\n",
        "      <td>[30774, 30775]</td>\n",
-       "      <td>[1509, 1018, 3501471642, 21247, 12048, 1116173...</td>\n",
+       "      <td>[1018, 1509, 10596, 11177, 11629, 11634, 11704...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -223,7 +223,7 @@
        "      <td>1000.0</td>\n",
        "      <td>4.532468</td>\n",
        "      <td>[30776]</td>\n",
-       "      <td>[1415, 11704, 1082283206, 11177, 21247, 1416, ...</td>\n",
+       "      <td>[1018, 11177, 11617, 11629, 11704, 11867, 2042...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -238,11 +238,11 @@
        "4   5241461680470612149  spb        1000.0  4.532468         [30776]   \n",
        "\n",
        "                                         features_id  \n",
-       "0  [1415, 1509, 1018, 3501618484, 1082283206, 141...  \n",
-       "1  [1018, 3501779478, 246, 11704, 11629, 11867, 3...  \n",
-       "2  [21247, 3501779478, 11867, 11629, 11704, 11177...  \n",
-       "3  [1509, 1018, 3501471642, 21247, 12048, 1116173...  \n",
-       "4  [1415, 11704, 1082283206, 11177, 21247, 1416, ...  "
+       "0  [1018, 1509, 11177, 11617, 11629, 11704, 11867...  \n",
+       "1  [246, 1018, 11617, 11629, 11704, 11867, 20422,...  \n",
+       "2  [1018, 11177, 11617, 11629, 11704, 11867, 2042...  \n",
+       "3  [1018, 1509, 10596, 11177, 11629, 11634, 11704...  \n",
+       "4  [1018, 11177, 11617, 11629, 11704, 11867, 2042...  "
       ]
      },
      "execution_count": 4,
@@ -713,6 +713,8 @@
    "source": [
     "Метрика принимает на вход два DataFrame, имеющих такую же структуру, как и **y_test**.\n",
     "\n",
+    "`print_score` домножает реальное значение метрики на 100 так же, как и в контесте.\n",
+    "\n",
     "Подобная имплементация используется для оценки **submission**."
    ]
   },
@@ -797,7 +799,7 @@
     "\n",
     "\n",
     "def print_score(score):\n",
-    "    print(f\"Score: {score:.6f}\")\n",
+    "    print(f\"Score: {score*100.0:.2f}\")\n",
     "    \n",
     "    \n",
     "N = 20\n",
@@ -851,9 +853,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Score: 0.000002\n",
-      "CPU times: user 2.53 s, sys: 63.1 ms, total: 2.6 s\n",
-      "Wall time: 2.59 s\n"
+      "Score: 0.02\n",
+      "CPU times: user 2.2 s, sys: 59.9 ms, total: 2.26 s\n",
+      "Wall time: 2.22 s\n"
      ]
     }
    ],
@@ -861,7 +863,7 @@
     "%%time\n",
     "\n",
     "np.random.seed(1337)\n",
-    "choose = lambda x: np.random.choice(spb_orgs, N) if x['user_id'] == 'msk' else np.random.choice(msk_orgs, N)\n",
+    "choose = lambda x: np.random.choice(spb_orgs, N) if x['city'] == 'msk' else np.random.choice(msk_orgs, N)\n",
     "target = test_users_with_locations.apply(choose, axis=1)\n",
     "\n",
     "predictions = X_test.copy()\n",
@@ -912,16 +914,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Score: 0.005134\n",
-      "CPU times: user 715 ms, sys: 16 ms, total: 731 ms\n",
-      "Wall time: 734 ms\n"
+      "Score: 4.21\n",
+      "CPU times: user 637 ms, sys: 9.89 ms, total: 647 ms\n",
+      "Wall time: 647 ms\n"
      ]
     }
    ],
    "source": [
     "%%time\n",
     "\n",
-    "choose = lambda x: spb_orgs if x['user_id'] == 'msk' else msk_orgs\n",
+    "choose = lambda x: spb_orgs if x['city'] == 'msk' else msk_orgs\n",
     "target = test_users_with_locations.apply(choose, axis=1)\n",
     "\n",
     "predictions = X_test.copy()\n",
@@ -976,16 +978,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Score: 0.009146\n",
-      "CPU times: user 833 ms, sys: 16.9 ms, total: 850 ms\n",
-      "Wall time: 866 ms\n"
+      "Score: 6.40\n",
+      "CPU times: user 652 ms, sys: 5.35 ms, total: 657 ms\n",
+      "Wall time: 657 ms\n"
      ]
     }
    ],
    "source": [
     "%%time\n",
     "\n",
-    "choose = lambda x: spb_orgs if x['user_id'] == 'msk' else msk_orgs\n",
+    "choose = lambda x: spb_orgs if x['city'] == 'msk' else msk_orgs\n",
     "target = test_users_with_locations.apply(choose, axis=1)\n",
     "\n",
     "predictions = X_test.copy()\n",
@@ -1085,16 +1087,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Score: 0.009645\n",
-      "CPU times: user 693 ms, sys: 8.87 ms, total: 702 ms\n",
-      "Wall time: 705 ms\n"
+      "Score: 5.77\n",
+      "CPU times: user 642 ms, sys: 5 ms, total: 647 ms\n",
+      "Wall time: 647 ms\n"
      ]
     }
    ],
    "source": [
     "%%time\n",
     "\n",
-    "choose = lambda x: spb_orgs if x['user_id'] == 'msk' else msk_orgs\n",
+    "choose = lambda x: spb_orgs if x['city'] == 'msk' else msk_orgs\n",
     "target = test_users_with_locations.apply(choose, axis=1)\n",
     "\n",
     "predictions = X_test.copy()\n",
@@ -1364,7 +1366,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "36b71a8a27744765a4c304c50dccd1b8",
+       "model_id": "c1ba59ce692b400c9bfd5c415699b4ba",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1378,7 +1380,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ede2513da594463da82e3989a474e0e3",
+       "model_id": "3204a7e53c654c73bab13f6adb2eae85",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1406,7 +1408,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "11c975ac57d140639df7bdc2da6d43f1",
+       "model_id": "dd3d090b6d404c2e959d94f2119c10ec",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1420,7 +1422,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "754765bda6654289bef50e77067c1230",
+       "model_id": "4d09cbaed2e84e7d9d86598aa60ea625",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1449,8 +1451,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 1min 48s, sys: 1.8 s, total: 1min 50s\n",
-      "Wall time: 33.8 s\n"
+      "CPU times: user 1min 52s, sys: 1.97 s, total: 1min 54s\n",
+      "Wall time: 34.6 s\n"
      ]
     }
    ],
@@ -1552,9 +1554,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Score: 0.008543\n",
-      "CPU times: user 517 ms, sys: 6.84 ms, total: 524 ms\n",
-      "Wall time: 522 ms\n"
+      "Score: 0.85\n",
+      "CPU times: user 592 ms, sys: 12.3 ms, total: 604 ms\n",
+      "Wall time: 607 ms\n"
      ]
     }
    ],
@@ -1585,17 +1587,21 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "a3ac7639",
+   "id": "6d27e2b0",
    "metadata": {},
    "outputs": [],
    "source": [
-    "test_users = pd.read_csv('data/test_users.csv')\n",
-    "test_users['city'] = test_users.merge(users, on='user_id')['city']\n",
+    "# набор отзывов только от туристов\n",
+    "tourist_reviews = reviews[reviews['rating'] >= 4.0]\n",
+    "tourist_reviews = tourist_reviews[tourist_reviews['user_city'] != tourist_reviews['org_city']]\n",
     "\n",
-    "tourist_reviews = reviews[(reviews['ts'] > 900) & (reviews['user_city'] != reviews['org_city'])]\n",
+    "# выбираем самые популярные места среди туристов из Москвы и Питера\n",
+    "msk_orgs = tourist_reviews[tourist_reviews['org_city'] == 'msk']['org_id']\n",
+    "msk_orgs = msk_orgs.value_counts().index[:N].to_list()\n",
     "\n",
-    "msk_orgs = extract_top_by_rubrics(tourist_reviews[tourist_reviews['org_city'] == 'msk'], N)\n",
-    "spb_orgs = extract_top_by_rubrics(tourist_reviews[tourist_reviews['org_city'] == 'spb'], N)\n",
+    "spb_orgs = tourist_reviews[tourist_reviews['org_city'] == 'spb']['org_id']\n",
+    "spb_orgs = spb_orgs.value_counts().index[:N].to_list()\n",
+    "\n",
     "\n",
     "msk_orgs = str(' '.join(map(str, msk_orgs)))\n",
     "spb_orgs = str(' '.join(map(str, spb_orgs)))"
@@ -1604,6 +1610,17 @@
   {
    "cell_type": "code",
    "execution_count": 25,
+   "id": "a3ac7639",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_users = pd.read_csv('data/test_users.csv')\n",
+    "test_users['city'] = test_users.merge(users, on='user_id')['city']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
    "id": "72f23e9d",
    "metadata": {},
    "outputs": [
@@ -1636,27 +1653,27 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>3545210947248911048</td>\n",
-       "      <td>15250345250621165867 15684663803879321952 1122...</td>\n",
+       "      <td>12046097390037935713 5002407858008059043 14814...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>15271987121288045390</td>\n",
-       "      <td>15250345250621165867 15684663803879321952 1122...</td>\n",
+       "      <td>12046097390037935713 5002407858008059043 14814...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>15016858616184265932</td>\n",
-       "      <td>15250345250621165867 15684663803879321952 1122...</td>\n",
+       "      <td>12046097390037935713 5002407858008059043 14814...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>12457244142928722989</td>\n",
-       "      <td>15250345250621165867 15684663803879321952 1122...</td>\n",
+       "      <td>12046097390037935713 5002407858008059043 14814...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>13339684649926251468</td>\n",
-       "      <td>15250345250621165867 15684663803879321952 1122...</td>\n",
+       "      <td>15250345250621165867 13573322486152844808 9104...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1664,20 +1681,20 @@
       ],
       "text/plain": [
        "                user_id                                             target\n",
-       "0   3545210947248911048  15250345250621165867 15684663803879321952 1122...\n",
-       "1  15271987121288045390  15250345250621165867 15684663803879321952 1122...\n",
-       "2  15016858616184265932  15250345250621165867 15684663803879321952 1122...\n",
-       "3  12457244142928722989  15250345250621165867 15684663803879321952 1122...\n",
-       "4  13339684649926251468  15250345250621165867 15684663803879321952 1122..."
+       "0   3545210947248911048  12046097390037935713 5002407858008059043 14814...\n",
+       "1  15271987121288045390  12046097390037935713 5002407858008059043 14814...\n",
+       "2  15016858616184265932  12046097390037935713 5002407858008059043 14814...\n",
+       "3  12457244142928722989  12046097390037935713 5002407858008059043 14814...\n",
+       "4  13339684649926251468  15250345250621165867 13573322486152844808 9104..."
       ]
      },
-     "execution_count": 25,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "choose = lambda x: spb_orgs if x['user_id'] == 'msk' else msk_orgs\n",
+    "choose = lambda x: spb_orgs if x['city'] == 'msk' else msk_orgs\n",
     "target = test_users.apply(choose, axis=1)\n",
     "\n",
     "predictions = test_users[['user_id']]\n",
@@ -1688,7 +1705,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "id": "fab92407",
    "metadata": {},
    "outputs": [],
@@ -1706,14 +1723,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "id": "c6362223",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "14ea187b76b849bc8edfd7a3f4d829fc",
+       "model_id": "af2b602ccc934dd9bbc13cf18d446b80",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1727,7 +1744,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4e9f5236827548c688838ba6bdaa5ec2",
+       "model_id": "4b38a1a3c5b8410d923db3fb843bdd5d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1755,7 +1772,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "87bd93330b6a4606bd9ffb2db86b55dc",
+       "model_id": "b925d09edfdc45e2a24f2d6294015ad4",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1769,7 +1786,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0747657f15544e43aef436eac16c2830",
+       "model_id": "ec77d0a29ca444b5aaf71c416bdc3026",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1822,7 +1839,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
    "id": "85617a3a",
    "metadata": {},
    "outputs": [
@@ -1890,7 +1907,7 @@
        "4  16511650156158419042  10899892390879739444 1232005279283743070 15250..."
       ]
      },
-     "execution_count": 28,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1902,7 +1919,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 30,
    "id": "07e2e5c0",
    "metadata": {},
    "outputs": [],
