add new nlp metric

--- a/nlp/offline_baseline.ipynb
+++ b/nlp/offline_baseline.ipynb
@@ -48,6 +48,13 @@
     "from torch import softmax, sigmoid\n",
     "import numpy as np\n",
     "\n",
+    "\n",
+    "ALLOWED_ALPHABET=list(map(chr, range(ord('а'), ord('я') + 1)))\n",
+    "ALLOWED_ALPHABET.extend(map(chr, range(ord('a'), ord('z') + 1)))\n",
+    "ALLOWED_ALPHABET.extend(list(map(str.upper, ALLOWED_ALPHABET)))\n",
+    "ALLOWED_ALPHABET = set(ALLOWED_ALPHABET)\n",
+    "\n",
+    "\n",
     "def logits_to_toxic_probas(logits):\n",
     "    if logits.shape[-1] > 1:\n",
     "        activation = lambda x: softmax(x, -1)\n",
@@ -150,7 +157,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "253b4b8ac15a4abdbaef313808ac2932",
+       "model_id": "f9a3d78c1c1e48a9bdbbd92a21b0e745",
        "version_major": 2,
        "version_minor": 0
       },
@@ -333,7 +340,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6dc176422c4a48a9b06a7600f8907516",
+       "model_id": "02f2386b32d2445c8007a8acf23f0a9c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -395,17 +402,21 @@
       "Loading tokenizer\n",
       "Loading model\n",
       "Loading texts\n",
+      "Loading LM\n",
       "Loading embeddings\n",
       "Scoring\n",
-      " 18%|███████▎                                | 92/500.0 [00:03<00:15, 26.92it/s]Token indices sequence length is longer than the specified maximum sequence length for this model (533 > 512). Running this sequence through the model will result in indexing errors\n",
-      "100%|███████████████████████████████████████| 500/500.0 [00:20<00:00, 24.07it/s]\n",
-      "2500it [00:12, 202.25it/s]\n",
-      "28.08\n"
+      " 10%|████                                    | 50/500.0 [00:01<00:15, 29.21it/s]Token indices sequence length is longer than the specified maximum sequence length for this model (534 > 512). Running this sequence through the model will result in indexing errors\n",
+      "100%|███████████████████████████████████████| 500/500.0 [00:20<00:00, 24.28it/s]\n",
+      "2500it [00:26, 95.03it/s] \n",
+      "average toxicity: 0.6330938\n",
+      "mean lmdiff: 1.0\n",
+      "mean distance_score: 1.0\n",
+      "36.69\n"
      ]
     }
    ],
    "source": [
-    "!python3.7 score.py public_testset.short.txt public_testset.short.txt  --embeddings embeddings_with_lemmas.npz --model ./trained_roberta/ --device cuda --score -"
+    "!python3.7 score.py public_testset.short.txt public_testset.short.txt  --embeddings embeddings_with_lemmas.npz --lm lm.binary --model ./trained_roberta/ --device cuda --score -"
    ]
   },
   {
@@ -429,17 +440,21 @@
       "Loading tokenizer\n",
       "Loading model\n",
       "Loading texts\n",
+      "Loading LM\n",
       "Loading embeddings\n",
       "Scoring\n",
-      " 24%|█████████▏                             | 118/500.0 [00:04<00:22, 17.10it/s]Token indices sequence length is longer than the specified maximum sequence length for this model (591 > 512). Running this sequence through the model will result in indexing errors\n",
-      "100%|███████████████████████████████████████| 500/500.0 [00:20<00:00, 24.98it/s]\n",
-      "2500it [00:28, 88.25it/s] \n",
-      "41.06\n"
+      " 20%|███████▊                               | 100/500.0 [00:03<00:14, 27.69it/s]Token indices sequence length is longer than the specified maximum sequence length for this model (593 > 512). Running this sequence through the model will result in indexing errors\n",
+      "100%|███████████████████████████████████████| 500/500.0 [00:19<00:00, 25.01it/s]\n",
+      "2500it [00:40, 62.24it/s]\n",
+      "average toxicity: 0.46444112\n",
+      "mean lmdiff: 0.9444674231112382\n",
+      "mean distance_score: 0.8119417961430562\n",
+      "42.11\n"
      ]
     }
    ],
    "source": [
-    "!python3.7 score.py public_testset.short.txt baseline_fixed.txt  --embeddings embeddings_with_lemmas.npz --model ./trained_roberta/ --device cuda --score -"
+    "!python3.7 score.py public_testset.short.txt baseline_fixed.txt  --embeddings embeddings_with_lemmas.npz --lm lm.binary --model ./trained_roberta/ --device cuda --score -"
    ]
   },
   {
